# pypipr_package

./: .buildinfo  .gitignore  README.md  TODO.md  changelog.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_autosummary/: piprkit.PupilFit.html  piprkit.PupilMeasurement.html  piprkit.PupilSeries.html  pypipr.LightStimuliSeries.html  pypipr.LightStimulus.html  pypipr.PupilFit.html  pypipr.PupilMeasurement.html  pypipr.PupilSeries.html  pypipr.analysis.fitting.base_fit.html  pypipr.analysis.fitting.html  pypipr.analysis.fitting.phase_fits.html  pypipr.analysis.fitting.pupil_fit.html  pypipr.analysis.html  pypipr.analysis.pupil_metrics.html  pypipr.check_time_series.html  pypipr.core.html  pypipr.core.pupil_base.html  pypipr.core.pupil_measurement.html  pypipr.core.pupil_series.html  pypipr.data.html  pypipr.data.loaders.html  pypipr.load_real_series.html  pypipr.load_simulated_pupil.html  pypipr.preprocessing.blinks.html  pypipr.preprocessing.filtering.html  pypipr.preprocessing.html  pypipr.simulate_pupil_measurement.html  pypipr.utils.html  pypipr.utils.light_stimuli.html  pypipr.utils.utils.html
_modules/: index.html
_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt
api/: analysis.html  core.html  data.html  preprocessing.html  utils.html
docs/: requirements.txt
docs/source/: conf.py  (+1 more)
examples/: pupil_fit.html  pupil_measurement.html  pupil_series.html
pypipr/: __init__.py
tests/: test_integration.py
(+172 files in other folders)
